feat: Delete user function
